--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <body>
   <div class="container">
     <form id="formulario">
-      
+      <div class="step active" id="step-0">
         <h2><span class="circle" style="background: var(--azul)">1</span>Situação 🧠</h2>
         <label for="situacao">Descreva a situação:</label>
         <textarea id="situacao"></textarea>
