Update index.html update add section instruções

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     <button onclick="iniciarFormulario()">🚀 Começar</button>
   </div>
 </div>
-<form id="formulario">
-      
-        <h2><span class="circle" style="background: var(--azul)">1</span>Situação 🧠</h2>
+</div>
+<div class="step" id="step-0">
+<h2><span class="circle" style="background: var(--azul)">1</span>Situação 🧠</h2>
         <label for="situacao">Descreva a situação:</label>
         <textarea id="situacao"></textarea>
         <label for="intensidade1">Intensidade: <span id="val1">0</span></label>
