--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
   </style>
 </head>
 <body>
-  <div class="step" id="step-0">
-  <h2>📘 Instruções de uso</h2>
+<div class="container">
+    <div class="step active" id="step-0">  <h2>📘 Instruções de uso</h2>
   <ul>
     <li>1️⃣ <strong>Preencha na ordem</strong> – cada etapa te guia para examinar seus pensamentos de forma objetiva</li>
     <li>2️⃣ <strong>Quanto mais específico melhor</strong> – quanto mais detalhes, melhor funciona</li>
@@ -230,7 +230,7 @@
     }
 function iniciarFormulario() {
   document.getElementById("step-inicio").classList.remove("active");
-  passoAtual = 0;
+  passoAtual = 1;
   document.getElementById("step-0").classList.add("active");
 }
 
