--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="step active" id="step-0">  <h2>📘 Instruções de uso</h2>
+    <div class="step active" id="step-inicio">  <h2>📘 Instruções de uso</h2>
   <ul>
     <li>1️⃣ <strong>Preencha na ordem</strong> – cada etapa te guia para examinar seus pensamentos de forma objetiva</li>
     <li>2️⃣ <strong>Quanto mais específico melhor</strong> – quanto mais detalhes, melhor funciona</li>
@@ -122,7 +122,7 @@
   </ul>
   <div style="text-align:center; margin-top: 20px;">
        <div class="nav-buttons">
-   <button onclick="iniciarFormulario()">🚀 Começar</button>  </div>
+   <button onclick="nextStep()">🚀 Começar</button>  </div>
 </div>
 </div>
 <div class="step" id="step-1">
