--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   </ul>
   <div style="text-align:center; margin-top: 20px;">
        <div class="nav-buttons">
-   <span></span><button onclick="iniciarFormulario()">🚀 Começar</button>  </div>
+   <span></span><button type="button" onclick="iniciarFormulario()">🚀 Começar</button>  </div>
 </div>
 </div>
 <div class="step" id="step-1">
