--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
   </style>
 </head>
 <body>
-<div class="container">
-    <div class="step active" id="step-inicio">  <h2>📘 Instruções de uso</h2>
+  <div class="container">
+    <div class="step active" id="step-inicio">
+  <h2>📘 Instruções de uso</h2>
   <ul>
     <li>1️⃣ <strong>Preencha na ordem</strong> – cada etapa te guia para examinar seus pensamentos de forma objetiva</li>
     <li>2️⃣ <strong>Quanto mais específico melhor</strong> – quanto mais detalhes, melhor funciona</li>
@@ -121,22 +122,21 @@
     <li>4️⃣ <strong>Use regularmente</strong> – especialmente quando estiver tendo pensamentos difíceis</li>
   </ul>
   <div style="text-align:center; margin-top: 20px;">
-       <div class="nav-buttons">
-   <span></span><button type="button" onclick="iniciarFormulario()">🚀 Começar</button>  </div>
+    <button onclick="iniciarFormulario()">🚀 Começar</button>
+  </div>
 </div>
 </div>
-<div class="step" id="step-1">
+<div class="step" id="step-0">
 <h2><span class="circle" style="background: var(--azul)">1</span>Situação 🧠</h2>
         <label for="situacao">Descreva a situação:</label>
         <textarea id="situacao"></textarea>
         <label for="intensidade1">Intensidade: <span id="val1">0</span></label>
         <input type="range" id="intensidade1" min="0" max="10">
         <div class="nav-buttons">
-            <button type="button" onclick="prevStep()">← Anterior</button>
           <span></span><button type="button" onclick="nextStep()">Próximo →</button>
         </div>
       </div>
-      <div class="step" id="step-2">
+      <div class="step" id="step-1">
         <h2><span class="circle" style="background: var(--roxo)">2</span>Pensamento 💭</h2>
         <label for="pensamento">Qual foi o pensamento?</label>
         <textarea id="pensamento"></textarea>
@@ -147,7 +147,7 @@
           <button type="button" onclick="nextStep()">Próximo →</button>
         </div>
       </div>
-      <div class="step" id="step-3">
+      <div class="step" id="step-2">
         <h2><span class="circle" style="background: var(--verde)">3</span>Emoção 💓</h2>
         <label for="emocao">O que você sentiu?</label>
         <textarea id="emocao"></textarea>
@@ -158,7 +158,7 @@
           <button type="button" onclick="nextStep()">Próximo →</button>
         </div>
       </div>
-      <div class="step" id="step-4">
+      <div class="step" id="step-3">
         <h2><span class="circle" style="background: var(--laranja)">4</span>Lembrança 🧠</h2>
         <label for="lembranca">Houve alguma lembrança associada?</label>
         <textarea id="lembranca"></textarea>
@@ -169,7 +169,7 @@
           <button type="button" onclick="nextStep()">Próximo →</button>
         </div>
       </div>
-      <div class="step" id="step-5">
+      <div class="step" id="step-4">
         <h2><span class="circle" style="background: var(--vermelho)">5</span>Reação ⚡</h2>
         <label for="reacao">Qual foi sua reação?</label>
         <textarea id="reacao"></textarea>
@@ -200,12 +200,24 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <script>
-    let passoAtual = -1;
-    const campos = ["inicio", "situacao", "pensamento", "emocao", "lembranca", "reacao"];
+function iniciarFormulario() {
+  document.getElementById("step-inicio").classList.remove("active");
+  passoAtual = 0;
+  document.getElementById("step-0").classList.add("active");
+}
+
+let passoAtual = -1;
+    const campos = ["situacao", "pensamento", "emocao", "lembranca", "reacao"];
 
     function nextStep() {
   if (passoAtual >= 0) {
     document.getElementById(`step-${passoAtual}`).classList.remove("active");
+  } else {
+    document.getElementById("step-inicio").classList.remove("active");
+  }
+  passoAtual++;
+  document.getElementById(`step-${passoAtual}`).classList.add("active");
+}`).classList.remove("active");
   } else {
     document.getElementById("step-inicio").classList.remove("active");
   }
@@ -225,14 +237,16 @@
     document.getElementById("step-inicio").classList.add("active");
   }
 }`).classList.remove("active");
+  passoAtual--;
+  if (passoAtual >= 0) {
+    document.getElementById(`step-${passoAtual}`).classList.add("active");
+  } else {
+    document.getElementById("step-inicio").classList.add("active");
+  }
+}`).classList.remove("active");
       passoAtual--;
       document.getElementById(`step-${passoAtual}`).classList.add("active");
     }
-function iniciarFormulario() {
-  document.getElementById("step-inicio").classList.remove("active");
-  passoAtual = 1;
-  document.getElementById("step-1").classList.add("active");
-}
 
     function mostrarResumo() {
       const resultado = document.getElementById("resultado");
